--- a/multiagent_prediction/component.yaml
+++ b/multiagent_prediction/component.yaml
@@ -1,7 +1,7 @@
-name: multi_olas_prediction
+name: multiagent_prediction
 author: naptha
 version: 0.1.0
-description: An implementation of multi-olas prediction.
+description: An implementation of multi-agent prediction.
 license: MIT
 
 models:
